--- a/env.yml.sample
+++ b/env.yml.sample
@@ -11,3 +11,4 @@ db_second_page: "6601e719a39a460c908e8909467fcccf"
 db_update_page: "206ffaa277744a99baf593e28730240c"
 user_hkob: "2200a911-6a96-44bb-bd38-6bfb1e01b9f6"
 parent1_page: "860753bb6d1f48de96211fa6e0e31f82"
+parent_database: "1d6b1040a9fb48d99a3d041429816e9f"
